update team members

--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -25,13 +25,12 @@
   info: Join AML lab in 22Fall
   email: yuanshzhu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: Joint-PhD with SusTech, Prof James J.Q. Yu
+  education1: Joint-PhD with SusTech, Prof James J.Q. Yu and Xuan Song
   website: https://yasoz.github.io/
 - name: Jiawei Cheng
   photo: jiaweicheng.jpg
   info: Will join AML lab in 24Fall
   email: JarvisC@buaa.edu.cn
-  number_educ: 2
+  number_educ: 1
   education1: Joint-PhD with BUAA, Prof Jingyuan Wang
-  education2: BS from BUAA
   website: https://jarvisorange.github.io/
