--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -30,15 +30,17 @@
   website: https://wlzhang2020.github.io/
 - name: Siqi Lei
   photo: siqilei.jpg
-  info: Will join AML lab in 23Fall
+  info: Will join AML lab in 24Fall
   email: leisiqi@mail.ustc.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with USTC, Prof Qi Liu
   website: http://home.ustc.edu.cn/~leisiqi/
 - name: Derong Xu
   photo: derongxu.jpg
+  info: Will join AML lab in 24Fall
   email: derongxu@mail.ustc.edu.cn
-  number_educ: 2
-  education1: Joint PhD student with USTC, Prof Enhong Chen and Prof Tong Xu
-  education2: BS from Xidian University
+  number_educ: 1
+  education1: Joint-PhD student with USTC, Prof Enhong Chen and Prof Tong Xu
   website: https://quqxui.github.io/
 
 
