--- a/_data/phd19.yml
+++ b/_data/phd19.yml
@@ -1,3 +1,6 @@
 - name: Dayan Pan
   photo: dayanpan.jpg
   email: dayan@buaa.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with BUAA, Prof Jingyuan Wang
+  website: https://me.pandaif.com/
