--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -41,7 +41,7 @@
   number_educ: 0
 - name: Yan Zhang
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022
+  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022, next position - PhD at ZJU
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
