update team members

--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -25,7 +25,7 @@
   info: Join AML lab in 22Fall
   email: yuanshzhu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: Joint-PhD with SusTech, Prof James J.Q. Yu and Xuan Song
+  education1: Joint-PhD with SusTech, Prof James J.Q. Yu and Prof Xuan Song
   website: https://yasoz.github.io/
 - name: Jiawei Cheng
   photo: jiaweicheng.jpg
