update team members

--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -1,5 +1,8 @@
 - name: Shuo Xu
   photo: shuoxu.jpg
-  info:
   email: shuo.xu928@gmail.com
+  number_educ: 0
+- name: Zhuoran Li
+  photo: zhuoranli.jpg
+  email: bjx102800@gmail.com
   number_educ: 0
