--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,46 +1,46 @@
 - name: Chengxi Li
   photo: chengxili.jpg
-  info:
+  info: Mentor: Yejing Wang
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
   photo: jiaxihu.jpg
-  info:
+  info: Mentor: Jingtong Gao
   email: jiaxihu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
   photo: yutianxiao.jpg
-  info:
+  info: Mentor: Qidong Liu
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
   photo: tongwu.jpg
-  info:
+  info: Mentor: Maolin Wang
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qian Ma
   photo: qianma.jpg
-  info:
+  info: Mentor: Zijian Zhang
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info:
+  info: Mentor: Ziru Liu
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   photo: jiaocongwang.jpg
-  info:
+  info: Mentor: Yuhao Wang
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jie Wang
   photo: jiewang.jpg
-  info:
+  info: Mentor: Maolin Wang
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
   photo: boli.jpg
-  info:
+  info: Mentor: Langming Liu
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yinliang Kang
