--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -10,7 +10,7 @@
   number_educ: 0
 - name: Zhiwei Hu
   photo: zhiweihu.jpg
-  info: MS 2021-2022, next position - on market
+  info: MS 2021-2022, next position - PhD at CUHK SZ
   email:
   number_educ: 0
 - name: Ze Huang
