--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -4,5 +4,6 @@
   number_educ: 0
 - name: Zhuoran Li
   photo: zhuoranli.jpg
+  info: Mentor: Yuanshao Zhu
   email: bjx102800@gmail.com
   number_educ: 0
