--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -10,37 +10,37 @@
   number_educ: 0
 - name: Yutian Xiao
   photo: yutianxiao.jpg
-  info: Mentor: Qidong Liu
+  info: Mentor - Qidong Liu
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
   photo: tongwu.jpg
-  info: Mentor: Maolin Wang
+  info: Mentor - Maolin Wang
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qian Ma
   photo: qianma.jpg
-  info: Mentor: Zijian Zhang
+  info: Mentor - Zijian Zhang
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info: Mentor: Ziru Liu
+  info: Mentor - Ziru Liu
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   photo: jiaocongwang.jpg
-  info: Mentor: Yuhao Wang
+  info: Mentor - Yuhao Wang
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jie Wang
   photo: jiewang.jpg
-  info: Mentor: Maolin Wang
+  info: Mentor - Maolin Wang
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
   photo: boli.jpg
-  info: Mentor: Langming Liu
+  info: Mentor - Langming Liu
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yinliang Kang
