update ms21/22/23 info

--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,11 +1,11 @@
 - name: Chengxi Li
   photo: chengxili.jpg
-  info: Mentor: Yejing Wang
+  info: Mentor - Yejing Wang
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
   photo: jiaxihu.jpg
-  info: Mentor: Jingtong Gao
+  info: Mentor - Jingtong Gao
   email: jiaxihu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
