--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -34,7 +34,7 @@
   email: leisiqi@mail.ustc.edu.cn
   number_educ: 1
   education1: Joint-PhD student with USTC, Prof Qi Liu
-  website: http://home.ustc.edu.cn/~leisiqi/
+  website: http://home.ustc.edu.cn/~leisiqi/intro.html
 - name: Derong Xu
   photo: derongxu.jpg
   info: Will join AML lab in 24Fall
