--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: July 2023
+  headline: "Our team is honored to receive the CCF-Tencent Rhino-Bird Fund (CCF-腾讯犀牛鸟基金)"
+
 - date: June 2023
   headline: "Our paper STRec got accept by Recsys'23. Congratulations!"
 
