--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -3,3 +3,6 @@
 
 - title: Spring 2023 - WSDM Conference in Singapore
   image: wsdm23.jpg
+
+- title: Summer 2023 - Photo taken at CityU
+  image: members_0.jpg
