--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Aug 2023
+  headline: "9 of our papers (7 full & 2 short) got accept by CIKM'23. Congratulations!"
+
 - date: July 2023
   headline: "Our team is honored to receive the CCF-Tencent Rhino-Bird Fund (CCF-腾讯犀牛鸟基金)"
 
