--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -19,6 +19,11 @@
   info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, Online RA in 2022-Now
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
+- name: Shanru Lin
+  photo: shanruliu.jpg
+  info: Full-time RA at CityU, in 2023
+  email: jLliu@cnic.cn
+  number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
   info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, Visiting Student in 2023
