--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -20,7 +20,7 @@
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Shanru Lin
-  photo: shanruliu.jpg
+  photo: shanrulin.jpg
   info: Full-time RA at CityU, in 2023
   email: jLliu@cnic.cn
   number_educ: 0
