--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -22,7 +22,7 @@
 - name: Shanru Lin
   photo: shanrulin.jpg
   info: Full-time RA at CityU, in 2023
-  email: jLliu@cnic.cn
+  email: lllam32316@gmail.com
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
