--- a/_data/phd19.yml
+++ b/_data/phd19.yml
@@ -4,4 +4,4 @@
   info: Will join AML lab in 23Fall
   number_educ: 1
   education1: Joint-PhD with BUAA, Prof Jingyuan Wang
-  website: https://me.pandaif.com/
+  website: https://me.pandaif.com/%E4%B8%AA%E4%BA%BA%E8%AF%B4%E6%98%8E%E4%B9%A6/
