--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Aug 2023
+  headline: "Our paper 'Mitigating Performance Sacrifice in DP-satisfied Federated Settings through Graph Contrastive Learning' got accept by Information Sciences. Congratulations!"
+
+- date: Aug 2023
   headline: "9 of our papers (7 full & 2 short) got accept by CIKM'23. Congratulations!"
 
 - date: July 2023
