--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,14 @@
 - date: Aug 2023
-  headline: "Our paper 'Mitigating Performance Sacrifice in DP-satisfied Federated Settings through Graph Contrastive Learning' got accept by Information Sciences. Congratulations!"
+  headline: "Our paper FGCL got accept by Information Sciences. Congratulations!"
 
 - date: Aug 2023
   headline: "9 of our papers (7 full & 2 short) got accept by CIKM'23. Congratulations!"
 
 - date: July 2023
   headline: "Our team is honored to receive the CCF-Tencent Rhino-Bird Fund (CCF-腾讯犀牛鸟基金)"
+
+- date: July 2023
+  headline: "Our paper AutoAssign+ got accept by Knowledge and Information Systems (KAIS). Congratulations!"
 
 - date: June 2023
   headline: "Our paper STRec got accept by Recsys'23. Congratulations!"
