--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Aug 2023
+  headline: "Four of our members receive the Research Tuition Scholarship (RTS-CityU) and two of them also receive the Outstanding Academic Performance Award (OAPA-CityU). Congratulations!"
+
+- date: Aug 2023
   headline: "Our paper FGCL got accept by Information Sciences. Congratulations!"
 
 - date: Aug 2023
