--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -15,7 +15,7 @@
   website: https://xiaopengli1.github.io/XiaopengLi/
 - name: Zichuan Fu
   photo: zichuanfu.jpg
-  info: Will join AML lab in 23Fall
+  info: Join AML lab in 23Fall
   email: fzkuji@gmail.com
   number_educ: 2
   education1: BS from XJTU
@@ -23,7 +23,7 @@
   website: https://fzkuji.github.io/
 - name: Wenlin Zhang
   photo: wenlinzhang.jpg
-  info: Will join AML lab in 23Fall
+  info: Join AML lab in 23Fall
   email: wlzhang98@gmail.com
   number_educ: 1
   education1: BS & MS from NWPU
