--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -14,7 +14,7 @@
   website: https://ming429778.github.io/
 - name: Guojing Li
   photo: guojingli.jpg
-  info: Will join AML lab in 23Fall
+  info: Join AML lab in 23Fall
   email: alfredjameslee@ruc.edu.cn
   number_educ: 1
   education1: Joint-PhD with RUC, Prof Wenxia Zhou
