--- a/_data/phd21.yml
+++ b/_data/phd21.yml
@@ -28,14 +28,14 @@
   website: https://liuqidong07.github.io/
 - name: Wei Ni
   photo: weini.jpg
-  info: Will join AML lab in 23Fall
+  info: Join AML lab in 23Fall
   email: 12121061@zju.edu.cn
   number_educ: 1
   education1: Joint-PhD with ZJU, Prof Xiaoye Miao
   website: https://welkinni.github.io/
 - name: Yusheng Lu
   photo: yushenglu.jpg
-  info: Will join AML lab in 23Fall
+  info: Join AML lab in 23Fall
   email: luyusheng@tongji.edu.cn
   number_educ: 1
   education1: Joint-PhD with Tongji, Prof. Yongrui Duan
