update publications and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Sep 2023
+  headline: "1 paper got accepted by TKDE. Congratulations!"
+
 - date: Aug 2023
   headline: "Four of our members receive the Research Tuition Scholarship (RTS-CityU) and two of them also receive the Outstanding Academic Performance Award (OAPA-CityU). Congratulations!"
 
