--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -6,3 +6,6 @@
 
 - title: Summer 2023 - Photo taken at CityU
   image: members_0.jpg
+
+- title: Summer 2023 - IJCAI Conference in Macao
+  image: ijcai23.jpg
