update team members

--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -7,3 +7,19 @@
   info: Mentor - Yuanshao Zhu
   email: bjx102800@gmail.com
   number_educ: 0
+- name: Yiqi You
+  photo: yiqiyou.jpg
+  email: yqyou4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Cheng Zhang
+  photo: chengzhang.jpg
+  email: szhang844-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiawei Liu
+  photo: jiaweiliu.jpg
+  email: jiawliu7-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Xuchuan Wang
+  photo: xuchuanwang.jpg
+  email: xuchuwang3-c@my.cityu.edu.hk
+  number_educ: 0
