--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -59,4 +59,13 @@
   info: BS at ZJU, Online RA in 2021, next position - PhD at ZJU
   email:
   number_educ: 0
-
+- name: Qingqing Yi
+  photo: qingqingyi.jpg
+  info: PhD at SWUFE, Visiting Student in 2023
+  email: yiqingqing@smail.swufe.edu.cn
+  number_educ: 0
+- name: Zhenyu Deng
+  photo: zhenyudeng.jpg
+  info: MS at SWPU, Visiting Student in 2023
+  email: zhenyu_deng@qq.com
+  number_educ: 0
