--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -11,8 +11,8 @@
   photo: yiqiyou.jpg
   email: yqyou4-c@my.cityu.edu.hk
   number_educ: 0
-- name: Cheng Zhang
-  photo: chengzhang.jpg
+- name: sheng Zhang
+  photo: shengzhang.jpg
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiawei Liu
