--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -11,7 +11,7 @@
   photo: yiqiyou.jpg
   email: yqyou4-c@my.cityu.edu.hk
   number_educ: 0
-- name: sheng Zhang
+- name: Sheng Zhang
   photo: shengzhang.jpg
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
