update publications and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Sep 2023
+  headline: "Our paper FedTensor got accepted by ICDM. Congratulations!"
+
+- date: Sep 2023
   headline: "1 paper got accepted by TKDE. Congratulations!"
 
 - date: Aug 2023
