--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -19,6 +19,7 @@
   photo: jiaweiliu.jpg
   email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
+  website: https://patrick-liu123.github.io/
 - name: Xuchuan Wang
   photo: xuchuanwang.jpg
   email: xuchuwang3-c@my.cityu.edu.hk
