--- a/_data/postdoc23.yml
+++ b/_data/postdoc23.yml
@@ -1,5 +1,6 @@
 - name: Yu Li
   photo: yuli.jpg
+  info: Join AML lab in 23Fall
   email: liyu.csjlu@gmail.com
   number_educ: 0
   website: https://liyu1990.github.io/
