--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Sep 2023
+  headline: "8 PhD students (Wenlin, Zichuan, Dayan, Guojing, Yusheng, Jiawei, Siqi and Derong) are welcome to join the AML Lab!"
+
+- date: Sep 2023
   headline: "Our paper FedTensor got accepted by ICDM. Congratulations!"
 
 - date: Sep 2023
@@ -53,6 +56,9 @@
   headline: "Our new survey <a href='https://arxiv.org/abs/2302.03883'>Multimodal Recommender Systems: A Survey</a> is online"
 
 - date: Jan 2023
+  headline: "2 PhD students (Pengyue and Xiaopeng) are welcome to join the AML Lab!"
+
+- date: Jan 2023
   headline: "9 of our papers got accept by WWW'23. Congratulations!"
 
 - date: Jan 2023
@@ -87,6 +93,9 @@
 
 - date: Sep 2022
   headline: "Welcome to our latest <a href='https://mp.weixin.qq.com/s/3Qu335pTzY8VqRHkTDfJtg'>survey of trustworthy recommender systems</a> in collaboration with the PolyU, MSU, and UST teams."
+
+- date: Sep 2022
+  headline: "10 PhD students (Zijian, Yejing, Yuhao, Jingtong, Maolin, Yuanshao, Ziru, Langming, Xiao, Qidong) are welcome to join the AML Lab!"
 
 - date: Aug 2022
   headline: "Our team won the Gold Medal and Top 10 best innovation award in the 7th International Invention Innovation Competition in Canada (iCAN 2022), co-supervised with Dr. Liang Dong"
