--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,3 +1,8 @@
+- name: JiangPing Lv
+  photo: jiangpinglv.jpg
+  info: Mentor - Langming Liu
+  email: jiangpilu2-c@my.cityu.edu.hk
+  number_educ: 0
 - name: Chengxi Li
   photo: chengxili.jpg
   info: Mentor - Yejing Wang
