--- a/_data/news.yml
+++ b/_data/news.yml
@@ -95,7 +95,7 @@
   headline: "Welcome to our latest <a href='https://mp.weixin.qq.com/s/3Qu335pTzY8VqRHkTDfJtg'>survey of trustworthy recommender systems</a> in collaboration with the PolyU, MSU, and UST teams."
 
 - date: Sep 2022
-  headline: "10 PhD students (Zijian, Yejing, Yuhao, Jingtong, Maolin, Yuanshao, Ziru, Langming, Xiao, Qidong) are welcome to join the AML Lab!"
+  headline: "11 PhD students (Zijian, Yejing, Yuhao, Jingtong, Maolin, Yuanshao, Ziru, Langming, Xiao Han, Qidong, Wei Ni) are welcome to join the AML Lab!"
 
 - date: Aug 2022
   headline: "Our team won the Gold Medal and Top 10 best innovation award in the 7th International Invention Innovation Competition in Canada (iCAN 2022), co-supervised with Dr. Liang Dong"
