--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Fall 2023 - Photo taken at CityU Chinese Restaurant
+  image: members_1.jpg
+
 - title: Spring 2023 - WWW Conference in the U.S.
   image: www23.jpg
 
