--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -50,6 +50,6 @@
   number_educ: 0
 - name: Yinliang Kang
   photo: yinliangkang.jpg
-  info:
+  info: Mentor - Pengyue Jia
   email: yinlikang2-c@my.cityu.edu.hk
   number_educ: 0
