--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,4 +1,4 @@
-- name: Jiangping Lv
+- name: Jiangping Lu
   photo: jiangpinglv.jpg
   info: Mentor - Langming Liu
   email: jiangpilu2-c@my.cityu.edu.hk
