--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: Sep 2023
-  headline: "8 PhD students (Wenlin, Zichuan, Dayan, Guojing, Yusheng, Jiawei, Siqi and Derong) are welcome to join the AML Lab!"
+  headline: "7 PhD students (Wenlin, Zichuan, Dayan, Yusheng, Jiawei, Siqi and Derong) are welcome to join the AML Lab!"
 
 - date: Sep 2023
   headline: "Our paper FedTensor got accepted by ICDM. Congratulations!"
