--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Sep 2023
+  headline: "5 of our papers (2 main & 3 Datasets and Benchmarks) got accept by NIPS'23. Congratulations!"
+
+- date: Sep 2023
   headline: "7 PhD students (Wenlin, Zichuan, Dayan, Yusheng, Jiawei, Siqi and Derong) are welcome to join the AML Lab!"
 
 - date: Sep 2023
