--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Oct 2023
+  headline: "1 MS student (Jie Wang) receives Outstanding Dissertation Award (summer 2023) and 4 MS students (Kecheng, Jiangping, Bo Li, and Jiaocong) receive Outstanding Research Project Award (summer 2023). Congratulations!"
+
 - date: Sep 2023
   headline: "5 of our papers (2 main & 3 Datasets and Benchmarks) got accept by NeurIPS'23. Congratulations!"
 
