--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: Oct 2023
-  headline: "Our paper 'A Comprehensive Survey on Automated Machine learning forRecommendations' got accepted by ACM Transactions on Recommender Systems. Congratulations!"
+  headline: "Our paper 'A Comprehensive Survey on Automated Machine learning forRecommendations' got accepted by TORS. Congratulations!"
 
 - date: Oct 2023
   headline: "1 MS student (Jie Wang) receives Outstanding Dissertation Award (summer 2023) and 4 MS students (Kecheng, Jiangping, Bo Li, and Jiaocong) receive Outstanding Research Project Award (summer 2023). Congratulations!"
