--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+
+- date: Oct 2023
+  headline: "2 of our papers got accept by WSDM'24. Congratulations!"
+
 - date: Oct 2023
   headline: "Our paper 'A Comprehensive Survey on Automated Machine learning for Recommendations' got accepted by TORS. Congratulations!"
 
