--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -12,3 +12,6 @@
 
 - title: Fall 2023 - Photo taken at CityU Chinese Restaurant
   image: members_1.jpg
+
+- title: Fall 2023 - CIKM Conference in the U.K.
+  image: cikm23.jpg
