--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,9 @@
 
+- date: Nov 2023
+  headline: "Our survey [On the Opportunities of Green Computing: A Survey](https://arxiv.org/abs/2311.00447) is online."
+
 - date: Oct 2023
-  headline: "Our survey Embedding in Recommender Systems: A Survey is online <https://arxiv.org/abs/2310.18608>"
+  headline: "Our survey [Embedding in Recommender Systems: A Survey](https://arxiv.org/abs/2310.18608) is online."
 
 - date: Oct 2023
   headline: "2 of our papers got accept by WSDM'24. Congratulations!"
