--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Nov 2023
+  headline: "Our team is honored to receive the CCF-BaiChuan-Ebtech Foundation Model Fund (CCF-百川-英博大模型基金)."
+
+- date: Nov 2023
   headline: "Our survey [On the Opportunities of Green Computing: A Survey](https://arxiv.org/abs/2311.00447) is online."
 
 - date: Oct 2023
