--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -29,6 +29,16 @@
   info: MS at SWPU, Visiting Student in 2023
   email: zhenyu_deng@qq.com
   number_educ: 0
+- name: Zhenzhen Zhao
+  photo: zhenzhenzhao.jpg
+  info: PhD at ZJUT, Visiting Student in 2023
+  email: zhenzzhao4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Qihong Pan
+  photo: qihongpan.jpg
+  info: PhD at ZJUT, Visiting Student in 2023
+  email: TBD
+  number_educ: 0
 - name: Shanru Lin
   photo: shanrulin.jpg
   info: Full-time RA at CityU, in 2023
