--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Nov 2023
+  headline: "Our paper 'Dynamically engineered multi-modal feature learning for predictions of office building cooling loads' got accepted by Applied Energy. Congratulations!"
+
+- date: Nov 2023
   headline: "Our team is honored to receive the CCF-BaiChuan-Ebtech Foundation Model Fund (CCF-百川-英博大模型基金)."
 
 - date: Nov 2023
