--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
 
 - date: Nov 2023
-  headline: "Our paper [Dynamically engineered multi-modal feature learning for predictions of office building cooling loads](https://www.sciencedirect.com/science/article/pii/S0306261923015477) got accepted by Applied Energy. Congratulations!"
+  headline: "Our paper [Dynamically Engineered Multi-modal Feature Learning for Predictions of Office Building Cooling Loads](https://www.sciencedirect.com/science/article/pii/S0306261923015477) got accepted by Applied Energy. Congratulations!"
 
 - date: Nov 2023
   headline: "Our team is honored to receive the CCF-BaiChuan-Ebtech Foundation Model Fund (CCF-百川-英博大模型基金)."
