--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,7 +3,7 @@
   headline: "Yu Li has been appointed as an assistant professor at Jilin University. Congratulations!"
 
 - date: Nov 2023
-  headline: "Our paper 'SMLP4Rec:An Efficient all-MLP Architecture for SequentialRecommendations' got accepted by TOIS. Congratulations!"
+  headline: "Our paper 'SMLP4Rec: An Efficient all-MLP Architecture for Sequential Recommendations' got accepted by TOIS. Congratulations!"
   
 - date: Nov 2023
   headline: "Our paper [Dynamically Engineered Multi-modal Feature Learning for Predictions of Office Building Cooling Loads](https://www.sciencedirect.com/science/article/pii/S0306261923015477) got accepted by Applied Energy. Congratulations!"
