--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Dec 2023
+  headline: "Our paper 'SSDRec: Self-Augmented Sequence Denoising for Sequential Recommendation' got accepted by ICDE 2024. Congratulations!"
+
 - date: Nov 2023
   headline: "Yu Li has been appointed as an assistant professor at Jilin University. Congratulations!"
 
