--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Dec 2023
+  headline: "Our paper 'D3: A Methodological Exploration of Domain Division, Modeling, and Balance in Multi-Domain Recommendations' got accepted by AAAI 2024. Congratulations!"
+
+- date: Dec 2023
   headline: "Our paper 'SSDRec: Self-Augmented Sequence Denoising for Sequential Recommendation' got accepted by ICDE 2024. Congratulations!"
 
 - date: Nov 2023
