--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Winter 2023 - NeurIPS Conference in the U.S.
+  image: kuaisim.jpg
+
 - title: Fall 2023 - CIKM Conference in the U.K.
   image: cikm23.jpg
 
