--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -1,7 +1,13 @@
+- name: Qiyuan Ge
+  photo: qiyuange.jpg
+  info: Mentor - Wenlin Zhang
+  email: qiyuange2-c@my.cityu.edu.hk
+  number_educ: 0
+  website: https://github.com/Qiyuan-Ge
 - name: Zhuoran Li
   photo: zhuoranli.jpg
   info: Mentor - Yuanshao Zhu
-  email: bjx102800@gmail.com
+  email: zhuorali7-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yiqi You
   photo: yiqiyou.jpg
