--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,6 +1,9 @@
 - title: Winter 2023 - NeurIPS Conference in the U.S.
   image: kuaisim.jpg
 
+- title: Winter 2023 - ICDM in Shanghai
+  image: ICDM23.jpg
+
 - title: Fall 2023 - CIKM Conference in the U.K.
   image: cikm23.jpg
 
