--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Winter 2023 - AI Innovation and Entrepreneurship Conference in Shenzhen
+  image: shenzhen.jpg
+
 - title: Winter 2023 - NeurIPS Conference in the U.S.
   image: kuaisim.jpg
 
