--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -19,6 +19,11 @@
   info: PhD at Tsinghua, with Prof Chunxiao Xing and Prof Yong Zhang, Online RA in 2022-Now
   email: xh-li20@mails.tsinghua.edu.cn
   number_educ: 0
+- name: Yantong Du
+  photo: yantongdu.jpg
+  info: PhD at HEU, Visiting Student in 2024
+  email: duyantong94@hrbeu.edu.cn
+  number_educ: 0
 - name: Qingqing Yi
   photo: qingqingyi.jpg
   info: PhD at SWUFE, Visiting Student in 2023
