--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -12,7 +12,7 @@
   email: xiaopli2-c@my.cityu.edu.hk
   number_educ: 1
   education1: BS & MS from XJTU
-  website: https://xiaopengli1.github.io/XiaopengLi/
+  website: https://xiaopengli1.github.io/
 - name: Zichuan Fu
   photo: zichuanfu.jpg
   info: Join AML lab in 23Fall
