--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -2,3 +2,7 @@
   photo: wenxinluo.jpg
   email: wenxinluo5-c@my.cityu.edu.hk
   number_educ: 0
+- name: Weirui Wang
+  photo: weiruiwang.jpg
+  email: wrwang8-c@my.cityu.edu.hk
+  number_educ: 0
