--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -6,3 +6,7 @@
   photo: weiruiwang.jpg
   email: wrwang8-c@my.cityu.edu.hk
   number_educ: 0
+- name: Weibo Zhou
+  photo: weibozhou.jpg
+  email: weibozhou2-c@my.cityu.edu.hk
+  number_educ: 0
