--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Jan 2024
+  headline: "Our paper 'When Federated Recommendation Meets Cold-Start Problem: Separating Item Attributes and User Interactions' got accepted by WWW 2024. Congratulations!"
+
 - date: Dec 2023
   headline: "Our paper 'Tensorized Hypergraph Neural Networks' got accepted by SDM 2024. Congratulations!"
 
