--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Feb 2024
+  headline: "Our paper 'Large Multimodal Model Compression via Efficient Pruning and Distillation' got accepted by WWW 2024 (industry track). Congratulations!"
+
 - date: Jan 2024
   headline: "Our paper 'When Federated Recommendation Meets Cold-Start Problem: Separating Item Attributes and User Interactions' got accepted by WWW 2024. Congratulations!"
 
