--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Feb 2024
+  headline: "Our paper 'Multi-perspective Improvement of Knowledge Graph Completion with Large Language Models' got accepted by LREC-COLING 2024. Congratulations!"
+
+- date: Feb 2024
   headline: "Our paper 'Large Multimodal Model Compression via Efficient Pruning and Distillation' got accepted by WWW 2024 (industry track). Congratulations!"
 
 - date: Jan 2024
