--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -5,7 +5,7 @@
   number_educ: 0
 - name: Haoran Yang
   photo: haoranyang.jpg
-  info: PhD at UTS, with Prof Guandong Xu, Online RA in 2022-Now
+  info: PhD at UTS&PolyU, with Prof Guandong Xu and Prof Qing Li, Online RA in 2022-Now
   email: haoran.yang-2@student.uts.edu.au
   number_educ: 0
   website: https://haoran-young.github.io/
