--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -30,7 +30,7 @@
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu
+  info: Mentor - Ziru Liu, next position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
