--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Spring 2024 - WSDM Conference in Merida
+  image: wsdm24.jpg
+
 - title: Winter 2023 - AI Innovation and Entrepreneurship Conference in Shenzhen
   image: shenzhen.jpg
 
