--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Mar 2024
+  headline: "Our paper 'MILL: Mutual Verification with Large Language Models for Zero-Shot Query Expansion' got accepted by NAACL 2024. Congratulations!"
+
 - date: Feb 2024
   headline: "Our paper 'Multi-perspective Improvement of Knowledge Graph Completion with Large Language Models' got accepted by LREC-COLING 2024. Congratulations!"
 
