--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -1,6 +1,6 @@
 - name: Yi Wen
   photo: yiwen.jpg
-  info: Join AML lab in 24Spring
+  info: Will join AML lab in 24Fall
   email: wenyiwy2022@163.com
   number_educ: 2
   education1: BS from CSU
