--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Mar 2024
+  headline: "4 of our papers (4 full & 1 resource) got accept by SIGIR'24. Congratulations!"
+
+- date: Mar 2024
   headline: "Our paper 'MILL: Mutual Verification with Large Language Models for Zero-Shot Query Expansion' got accepted by NAACL 2024. Congratulations!"
 
 - date: Feb 2024
