--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -1,35 +1,35 @@
 - name: Kesen Zhao
   photo: kesenzhao.jpg
-  info: MS 2021-2022, next position - PhD at UdeM
+  info: Mentor - Xiangyu Zhao, First Author: WWW23, NeurIPS23, CIKM22, next position - PhD at NTU
   email: kesenzhao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weilin Lin
   photo: weilinlin.jpg
-  info: MS 2021-2022, next position - PhD at HKUST GZ
+  info: Mentor - Xiangyu Zhao, First Author: WWW23, KDD22, next position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhiwei Hu
   photo: zhiweihu.jpg
-  info: MS 2021-2022, next position - PhD at CUHK SZ
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, First Author: CIKM23, next position - PhD at CUHK SZ
   email:
   number_educ: 0
 - name: Ze Huang
   photo: zehuang.jpg
-  info: MS 2021-2022, next position - Shokz
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, First Author: CIKM23, next position - Shokz
   email:
   number_educ: 0
 - name: Jiahao Liang
   photo: jiahaoliang.jpg
-  info: MS 2021-2022, next position - PhD at SCUT
+  info: Mentor - Xiangyu Zhao, First Author: WWW23, next position - PhD at SCUT
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xinxin Gong
   photo: xinxingong.jpg
-  info: MS 2021-2022, next position - Huawei
+  info: Mentor - Xiangyu Zhao, next position - Huawei
   email:
   number_educ: 0
 - name: Jiahao Dong
   photo: jiahaodong.jpg
-  info: MS 2021-2022, next position - HKAFIT
+  info: Mentor - Xiangyu Zhao, next position - HKAFIT
   email:
   number_educ: 0
