--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -1,6 +1,8 @@
 - name: Kesen Zhao
   photo: kesenzhao.jpg
-  info: Mentor - Xiangyu Zhao, First Author - WWW23, NeurIPS23, CIKM22, next position - PhD at NTU
+  info: Mentor - Xiangyu Zhao
+  First Author - WWW23, NeurIPS23, CIKM22
+  next position - PhD at NTU
   email: kesenzhao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weilin Lin
