--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -1,16 +1,18 @@
-- name: Jiaming Guo
-  photo: jiamingguo.jpg
-  email: jiaminguo6-c@my.cityu.edu.hk
+- name: Sheng Zhang
+  photo: shengzhang.jpg
+  info: Mentor - Maolin Wang
+  email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
-- name: Yuantian Zhou
-  photo: yuantianzhou.jpg
-  email: yuantzhou3-c@my.cityu.edu.hk
-  website: https://github.com/ZhouYuantian
+- name: Jiawei Liu
+  photo: jiaweiliu.jpg
+  info: Mentor - Yejing Wang
+  email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
-- name: Ziwei Liu
-  photo: ziweiliu.jpg
-  email: ziwliu8@gmail.com
-  website: https://github.com/BokettoW
+  website: https://patrick-liu123.github.io/
+- name: Jiangping Lu
+  photo: jiangpinglv.jpg
+  info: Mentor - Langming Liu
+  email: jiangpilu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qiyuan Ge
   photo: qiyuange.jpg
@@ -28,19 +30,22 @@
   info: Mentor - Pengyue Jia
   email: yqyou4-c@my.cityu.edu.hk
   number_educ: 0
-- name: Sheng Zhang
-  photo: shengzhang.jpg
-  info: Mentor - Maolin Wang
-  email: szhang844-c@my.cityu.edu.hk
-  number_educ: 0
-- name: Jiawei Liu
-  photo: jiaweiliu.jpg
-  info: Mentor - Yejing Wang
-  email: jiawliu7-c@my.cityu.edu.hk
-  number_educ: 0
-  website: https://patrick-liu123.github.io/
 - name: Xuchuan Wang
   info: Mentor - Siqi Lei
   photo: xuchuanwang.jpg
   email: xuchuwang3-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiaming Guo
+  photo: jiamingguo.jpg
+  email: jiaminguo6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yuantian Zhou
+  photo: yuantianzhou.jpg
+  email: yuantzhou3-c@my.cityu.edu.hk
+  website: https://github.com/ZhouYuantian
+  number_educ: 0
+- name: Ziwei Liu
+  photo: ziweiliu.jpg
+  email: ziwliu8@gmail.com
+  website: https://github.com/BokettoW
   number_educ: 0
