--- a/_data/ms23.yml
+++ b/_data/ms23.yml
@@ -9,7 +9,7 @@
   email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
   website: https://patrick-liu123.github.io/
-- name: Jiangping Lu
+- name: Jiangping Lv
   photo: jiangpinglv.jpg
   info: Mentor - Langming Liu
   email: jiangpilu2-c@my.cityu.edu.hk
