--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,12 +1,22 @@
-- name: Chengxi Li
-  photo: chengxili.jpg
-  info: Mentor - Yejing Wang
-  email: chengxli5-c@my.cityu.edu.hk
+- name: Qian Ma
+  photo: qianma.jpg
+  info: Mentor - Zijian Zhang, First Author - CIKM23, Next position - PhD at RPI
+  email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
   photo: jiaxihu.jpg
-  info: Mentor - Jingtong Gao
+  info: Mentor - Jingtong Gao, Next position - PhD at HKUST GZ
   email: jiaxihu2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Kecheng Chen
+  photo: kechengchen.jpg
+  info: Mentor - Ziru Liu, First Author - KIS, next position - PhD at HKBU
+  email: kechechen4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Chengxi Li
+  photo: chengxili.jpg
+  info: Mentor - Yejing Wang, First Author - RecSys23, Next position - Meituan
+  email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
   photo: yutianxiao.jpg
@@ -18,15 +28,10 @@
   info: Mentor - Maolin Wang
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
-- name: Qian Ma
-  photo: qianma.jpg
-  info: Mentor - Zijian Zhang
-  email: qma233-c@my.cityu.edu.hk
-  number_educ: 0
-- name: Kecheng Chen
-  photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, next position - PhD at HKBU
-  email: kechechen4-c@my.cityu.edu.hk
+- name: Jiangping Lv
+  photo: jiangpinglv.jpg
+  info: Mentor - Langming Liu
+  email: jiangpilu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   photo: jiaocongwang.jpg
@@ -48,3 +53,4 @@
   info: Mentor - Pengyue Jia
   email: yinlikang2-c@my.cityu.edu.hk
   number_educ: 0
+  
