--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,21 +1,21 @@
 - name: Qian Ma
   photo: qianma.jpg
-  info: Mentor - Zijian Zhang, First Author - CIKM23, Next position - PhD at RPI
+  info: Mentor - Zijian Zhang, first Author - CIKM23, next position - PhD at RPI
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, First Author - KIS, next position - PhD at HKBU
+  info: Mentor - Ziru Liu, first Author - KIS, next position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
   photo: jiaxihu.jpg
-  info: Mentor - Jingtong Gao, Next position - PhD at HKUST GZ
+  info: Mentor - Jingtong Gao, next position - PhD at HKUST GZ
   email: jiaxihu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Chengxi Li
   photo: chengxili.jpg
-  info: Mentor - Yejing Wang, First Author - RecSys23, Next position - Meituan
+  info: Mentor - Yejing Wang, first Author - RecSys23, next position - Meituan
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
@@ -28,7 +28,7 @@
   info: Mentor - Maolin Wang
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
-- name: Jiangping Lv
+- name: Jiangping Lu
   photo: jiangpinglv.jpg
   info: Mentor - Langming Liu
   email: jiangpilu2-c@my.cityu.edu.hk
