--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -1,11 +1,11 @@
 - name: Qian Ma
   photo: qianma.jpg
-  info: Mentor - Zijian Zhang, first Author - CIKM23, next position - PhD at RPI
+  info: Mentor - Zijian Zhang, first author - CIKM23, next position - PhD at RPI
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, first Author - KIS, next position - PhD at HKBU
+  info: Mentor - Ziru Liu, first author - KIS, next position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
@@ -15,7 +15,7 @@
   number_educ: 0
 - name: Chengxi Li
   photo: chengxili.jpg
-  info: Mentor - Yejing Wang, first Author - RecSys23, next position - Meituan
+  info: Mentor - Yejing Wang, first author - RecSys23, next position - Meituan
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
