--- a/_data/ms21.yml
+++ b/_data/ms21.yml
@@ -1,26 +1,26 @@
 - name: Kesen Zhao
   photo: kesenzhao.jpg
-  info: Mentor - Xiangyu Zhao, first Author - WWW23, NeurIPS23, CIKM22, next position - PhD at NTU
+  info: Mentor - Xiangyu Zhao, first author - WWW23, NeurIPS23, CIKM22, next position - PhD at NTU
   email: kesenzhao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weilin Lin
   photo: weilinlin.jpg
-  info: Mentor - Xiangyu Zhao, first Author - WWW23, KDD22, next position - PhD at HKUST GZ
+  info: Mentor - Xiangyu Zhao, first author - WWW23, KDD22, next position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhiwei Hu
   photo: zhiweihu.jpg
-  info: Mentor - Xiangyu Zhao & Zijian Zhang, first Author - CIKM23, next position - PhD at CUHK SZ
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, next position - PhD at CUHK SZ
   email:
   number_educ: 0
 - name: Jiahao Liang
   photo: jiahaoliang.jpg
-  info: Mentor - Xiangyu Zhao, first Author - WWW23, next position - PhD at SCUT
+  info: Mentor - Xiangyu Zhao, first author - WWW23, next position - PhD at SCUT
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Ze Huang
   photo: zehuang.jpg
-  info: Mentor - Xiangyu Zhao & Zijian Zhang, first Author - CIKM23, next position - Shokz
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, next position - Shokz
   email:
   number_educ: 0
 - name: Xinxin Gong
