--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Spring 2024 - SDM Conference in the U.S.
+  image: sdm24.jpg
+
 - title: Spring 2024 - WSDM Conference in Merida
   image: wsdm24.jpg
 
