--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,10 @@
 
+- date: May 2024
+  headline: "Our paper 'Graph Neural Stochastic Diffusion for Estimating Uncertainty in Node Classification' got accept by ICML'24. Congratulations!"
+
+- date: Apr 2024
+  headline: "2 of our papers got accept by IJCAI'24. Congratulations!"
+
 - date: Mar 2024
   headline: "5 of our papers (4 full & 1 resource) got accept by SIGIR'24. Congratulations!"
 
