--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -1,3 +1,9 @@
+- name: Rungen Liu
+  photo: rungenliu.jpg
+  info: Will join AML lab in 24Fall
+  email: allial_lrg@163.com
+  number_educ: 0
+
 - name: Yi Wen
   photo: yiwen.jpg
   info: Will join AML lab in 24Fall
