--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -20,12 +20,12 @@
   number_educ: 0
 - name: Yutian Xiao
   photo: yutianxiao.jpg
-  info: Mentor - Qidong Liu
+  info: Mentor - Qidong Liu, next position - Meituan
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
   photo: tongwu.jpg
-  info: Mentor - Maolin Wang
+  info: Mentor - Maolin Wang, next position - Kuaishou
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiangping Lu
@@ -40,7 +40,7 @@
   number_educ: 0
 - name: Jie Wang
   photo: jiewang.jpg
-  info: Mentor - Maolin Wang
+  info: Mentor - Maolin Wang, next position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
@@ -50,7 +50,7 @@
   number_educ: 0
 - name: Yinliang Kang
   photo: yinliangkang.jpg
-  info: Mentor - Pengyue Jia
+  info: Mentor - Pengyue Jia, next position - Agoda
   email: yinlikang2-c@my.cityu.edu.hk
   number_educ: 0
   
