--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -1,3 +1,11 @@
+- name: Tongzhou Wu
+  photo: tongzhouwu.jpg
+  info: Will join AML lab in 24Fall
+  email: artillerywtz@gmail.com
+  number_educ: 1
+  education1: MS from UCAS
+  website: https://github.com/MessiahCorleone
+
 - name: Rungen Liu
   photo: rungenliu.jpg
   info: Will join AML lab in 24Fall
