--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,11 @@
 
 - date: May 2024
+  headline: "2 of our papers got accept by KDD'24 ADS track. Congratulations!"
+
+- date: May 2024
+  headline: "Our paper 'Automatic Data Repair: Are We Ready to Deploy?' got accept by VLDB'24. Congratulations!"
+
+- date: May 2024
   headline: "Our paper 'Graph Neural Stochastic Diffusion for Estimating Uncertainty in Node Classification' got accept by ICML'24. Congratulations!"
 
 - date: Apr 2024
