--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
 
 - date: May 2024
-  headline: "2 of our papers got accept by KDD'24 ADS track. Congratulations!"
+  headline: "4 of our papers (2 Research & 2 ADS track) got accept by KDD'24. Congratulations!"
 
 - date: May 2024
   headline: "Our paper 'Automatic Data Repair: Are We Ready to Deploy?' got accept by VLDB'24. Congratulations!"
