--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: May 2024
+  headline: "Jialin Liu will join National University of Defense Technology (NUTD) as an assistant professor. Congratulations!"
+
+- date: May 2024
   headline: "4 of our papers (2 Research & 2 ADS track) got accept by KDD'24. Congratulations!"
 
 - date: May 2024
