--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -46,7 +46,7 @@
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, Visiting Student in 2023
+  info: <!--PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, --> Visiting Student in 2023, next position - AP at NUDT
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
