--- a/_data/phd20.yml
+++ b/_data/phd20.yml
@@ -12,3 +12,10 @@
   number_educ: 1
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://ming429778.github.io/
+- name: Langming Liu
+  photo: langmingliu.jpg
+  info: Join AML lab in 22Fall
+  email: langmiliu2-c@my.cityu.edu.hk
+  number_educ: 1
+  education1: with Prof Dingxuan Zhou (USYD)
+  website: https://ming429778.github.io/
