--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Spring 2024 - Web Conference in Singapore
+  image: www24.jpg
+
 - title: Spring 2024 - SDM Conference in the U.S.
   image: sdm24.jpg
 
