--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -20,7 +20,7 @@
   number_educ: 0
 - name: Yutian Xiao
   photo: yutianxiao.jpg
-  info: Mentor - Qidong Liu, next position - Meituan
+  info: Mentor - Qidong Liu, next position - PhD at BUAA
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
