--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -56,7 +56,7 @@
   number_educ: 0
 - name: Jie Cai
   photo: jiecai.jpg
-  info: MS at Tsinghua, with Prof Wenwu Zhu, Online RA in 2022
+  info: MS at Tsinghua, with Prof Wenwu Zhu, Online RA in 2022, next position - PhD at USC
   email: caij20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jiajun Zhou
