--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -21,3 +21,42 @@
   education1: BS from CSU
   education2: MS from NUDT
   website: https://wenyiwy99.github.io/
+
+- name: Haokun Wen
+  photo: haokunwen.jpg
+  info: Will join AML lab in 24Fall
+  email: whenhaokun@gmail.com
+  number_educ: 1
+  education1: Joint-PhD student with HITSZ
+  website: https://haokunwen.github.io
+
+- name: Chao Zhang
+  photo: chaozhang.jpg
+  info: Will join AML lab in 24Fall
+  email: zclfe00@gmail.com
+  number_educ: 1
+  education1: Joint-PhD student with USTC
+  website: https://zcfinal.github.io/zclfe.github.io/
+
+- name: Huidong Wu
+  photo: huidongwu.jpg
+  info: Will join AML lab in 24Fall
+  email: wuhuidong21@mails.ucas.ac.cn
+  number_educ: 1
+  education1: Joint-PhD student with UCAS
+
+- name: Kai Li
+  photo: kaili.jpg
+  info: Will join AML lab in 24Fall
+  email: likai211@mails.ucas.ac.cn
+  number_educ: 1
+  education1: Joint-PhD student with UCAS
+  website: https://github.com/likaiucas
+
+- name: Guojing Li
+  photo: guojingli.jpg
+  info: Will join AML lab in 24Fall
+  email: alfredjameslee@ruc.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with RUC
+  website: https://alfredjamesli.github.io/AlfredJamesLi/
