--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -30,6 +30,14 @@
   education1: Joint-PhD student with HITSZ
   website: https://haokunwen.github.io
 
+- name: Yingyi Zhang
+  photo: yingyizhang.jpg
+  info: Will join AML lab in 24Fall
+  email: yingyizhang@mail.dlut.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with DUT
+  website: https://zhang-yingyi.github.io
+
 - name: Chao Zhang
   photo: chaozhang.jpg
   info: Will join AML lab in 24Fall
