--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -68,3 +68,10 @@
   number_educ: 1
   education1: Joint-PhD student with RUC
   website: https://alfredjamesli.github.io/AlfredJamesLi/
+
+- name: Yimin Deng
+  photo: yimindeng.jpg
+  info: Will join AML lab in 24Fall
+  email: dymanne@stu.xjtu.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with XJTU
