--- a/_data/phd24.yml
+++ b/_data/phd24.yml
@@ -1,3 +1,27 @@
+- name: Jiawei Cheng
+  photo: jiaweicheng.jpg
+  info: Will join AML lab in 24Fall
+  email: JarvisC@buaa.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with BUAA, Prof Jingyuan Wang
+  website: https://jarvisorange.github.io/
+
+- name: Siqi Lei
+  photo: siqilei.jpg
+  info: Will join AML lab in 24Fall
+  email: leisiqi@mail.ustc.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with USTC, Prof Qi Liu
+  website: http://home.ustc.edu.cn/~leisiqi/intro.html
+
+- name: Derong Xu
+  photo: derongxu.jpg
+  info: Will join AML lab in 24Fall
+  email: derongxu@mail.ustc.edu.cn
+  number_educ: 1
+  education1: Joint-PhD student with USTC, Prof Enhong Chen and Prof Tong Xu
+  website: https://quqxui.github.io/
+
 - name: Tongzhou Wu
   photo: tongzhouwu.jpg
   info: Will join AML lab in 24Fall
