--- a/_data/phd23.yml
+++ b/_data/phd23.yml
@@ -28,6 +28,20 @@
   number_educ: 1
   education1: BS & MS from NWPU
   website: https://wlzhang2020.github.io/
+- name: Wei Ni
+  photo: weini.jpg
+  info: Join AML lab in 23Fall
+  email: 12121061@zju.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with ZJU, Prof Xiaoye Miao
+  website: https://welkinni.github.io/
+- name: Yusheng Lu
+  photo: yushenglu.jpg
+  info: Join AML lab in 23Fall
+  email: luyusheng@tongji.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with Tongji, Prof. Yongrui Duan
+  website: https://yushenglu94.github.io/
 - name: Dayan Pan
   photo: dayanpan.jpg
   email: dayan@buaa.edu.cn
