--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -2,60 +2,59 @@
   photo: zijianzhang.jpg
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 1
-  education1: Joint-PhD with JLU, Prof Hongwei Zhao
+  education1: CityU-JLU Joint-PhD
   website: https://zhangzj2114.github.io/
 - name: Yejing Wang
   photo: yejingwang.jpg
   email: yejing.wang@my.cityu.edu.hk
   number_educ: 1
-  education1: BS from USTC, School of Gifted Young
+  education1: PhD-Data Science
   website: https://dave-adamswang.github.io/
 - name: Jingtong Gao
   photo: jingtonggao.jpg
   email: jt.g@my.cityu.edu.hk
-  number_educ: 2
-  education1: BS from BUAA
-  education2: MS from NTU
+  number_educ: 1
+  education1: PhD-Data Science
   website: https://gaojingtong.github.io/
 - name: Yuhao Wang
   photo: yuhaowang.jpg
   email: yhwang25-c@my.cityu.edu.hk
   number_educ: 1
-  education1: BS from XJTU
+  education1: PhD-Data Science
   website: https://wyhwhy.github.io/
 - name: Maolin Wang
   photo: maolinwang.jpg
   email: Morin.wang@my.cityu.edu.hk
   number_educ: 1
-  education1: with Prof Junhui Wang (CUHK), and Dr Ruocheng Guo
+  education1: PhD-Data Science
   website: https://morin.wang
 - name: Ziru Liu
   photo: ziruliu.jpg
   email: ziruliu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: with Prof Dingxuan Zhou (USYD)
+  education1: PhD-Data Science
   website: https://lzr-s.github.io/
 - name: Langming Liu
   photo: langmingliu.jpg
   email: langmiliu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: with Prof Dingxuan Zhou (USYD)
+  education1: PhD-Data Science
   website: https://ming429778.github.io/
 - name: Qidong Liu
   photo: qidongliu.jpg
   email: qidongliu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: Joint-PhD with XJTU, Prof Feng Tian
+  education1: CityU-XJTU Joint-PhD
   website: https://liuqidong07.github.io/
 - name: Yuanshao Zhu
   photo: yuanshaozhu.jpg
   email: yuanshzhu2-c@my.cityu.edu.hk
   number_educ: 1
-  education1: Joint-PhD with SusTech, Prof James J.Q. Yu and Prof Xuetao Wei
+  education1: CityU-SusTech Joint-PhD
   website: https://yasoz.github.io/
 - name: Xiao Han
   photo: xiaohan.jpg
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 1
-  education1: with Prof Dingxuan Zhou (USYD)
+  education1: PhD-Data Science
   website: https://www.hahahenha.net/alpha-test/CV/index_ENG.html
