--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -68,3 +68,50 @@
   info: PhD-Data Science
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://www.hahahenha.net/alpha-test/CV/index_ENG.html
+
+  - name: Pengyue Jia
+  photo: pengyuejia.jpg
+  email: jia.pengyue@my.cityu.edu.hk
+  number_educ: 2
+  education1: BS from ZJU
+  education2: MS from HKU
+  website: https://jia-py.github.io
+- name: Xiaopeng Li
+  photo: xiaopengli.jpg
+  email: xiaopli2-c@my.cityu.edu.hk
+  number_educ: 1
+  education1: BS & MS from XJTU
+  website: https://xiaopengli1.github.io/
+- name: Zichuan Fu
+  photo: zichuanfu.jpg
+  email: fzkuji@gmail.com
+  number_educ: 2
+  education1: BS from XJTU
+  education2: MS from TUOS
+  website: https://fzkuji.github.io/
+- name: Wenlin Zhang
+  photo: wenlinzhang.jpg
+  email: wlzhang98@gmail.com
+  number_educ: 1
+  education1: BS & MS from NWPU
+  website: https://wlzhang2020.github.io/
+- name: Wei Ni
+  photo: weini.jpg
+  email: 12121061@zju.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with ZJU, Prof Xiaoye Miao
+  website: https://welkinni.github.io/
+- name: Yusheng Lu
+  photo: yushenglu.jpg
+  email: luyusheng@tongji.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with Tongji, Prof. Yongrui Duan
+  website: https://yushenglu94.github.io/
+- name: Dayan Pan
+  photo: dayanpan.jpg
+  email: dayan@buaa.edu.cn
+  number_educ: 1
+  education1: Joint-PhD with BUAA, Prof Jingyuan Wang
+  website: https://me.pandaif.com/%E4%B8%AA%E4%BA%BA%E8%AF%B4%E6%98%8E%E4%B9%A6/
+
+
