--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -153,7 +153,7 @@
   website: https://github.com/MessiahCorleone
 - name: Rungen Liu
   photo: rungenliu.jpg
-  info: PhD-Data Science
+  info: PhD-Information System
   email: allial_lrg@163.com
   number_educ: 0
   education1: BS from NEU
