--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: July 2024
+  headline: "Pengyue Jia and Yuanshao Zhu receive KDD student travel award. Congratulations!"
+
 - date: May 2024
   headline: "Jialin Liu will join National University of Defense Technology (NUTD) as an assistant professor. Congratulations!"
 
