--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -188,6 +188,7 @@
   info: CityU-UCAS Joint-PhD
   email: wuhuidong21@mails.ucas.ac.cn
   number_educ: 0
+  website: https://huiton-wu.github.io/
 - name: Kai Li
   photo: kaili.jpg
   info: CityU-UCAS Joint-PhD
