--- a/_data/news.yml
+++ b/_data/news.yml
@@ -66,7 +66,7 @@
   headline: "Our paper 'A Comprehensive Survey on Automated Machine learning for Recommendations' got accepted by TORS. Congratulations!"
 
 - date: Oct 2023
-  headline: "1 MS student (Jie Wang) receives Outstanding Dissertation Award (summer 2023) and 4 MS students (Kecheng, Jiangping, Bo Li, and Jiaocong) receive Outstanding Research Project Award (summer 2023). Congratulations!"
+  headline: "1 MS student (Jie Wang) receives Outstanding Dissertation Award (summer 2023), 4 MS students (Kecheng, Jiangping, Bo Li, and Jiaocong) receive Outstanding Research Project Award (summer 2023) and 1 undergraduate student (Yi Wong) graduates with first class honours. Congratulations!"
 
 - date: Sep 2023
   headline: "5 of our papers (2 main & 3 Datasets and Benchmarks) got accept by NeurIPS'23. Congratulations!"
