--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: July 2024
+  headline: "5 of our full research track papers got accept by CIKM'24. Congratulations!"
+
+- date: July 2024
   headline: "2 MS students (Sheng Zhang and Yinliang Kang) graduate with distinction. Congratulations!"
 
 - date: July 2024
