--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -39,7 +39,7 @@
   number_educ: 0
   info: PhD-Data Science
   education1: with Prof Dingxuan Zhou (USYD)
-  website: https://lzr-s.github.io/
+  website: https://liuziru666.wixsite.com/homepage
 - name: Langming Liu
   photo: langmingliu.jpg
   email: langmiliu2-c@my.cityu.edu.hk
