--- a/_data/ms22.yml
+++ b/_data/ms22.yml
@@ -5,7 +5,7 @@
   number_educ: 0
 - name: Kecheng Chen
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, first author - KIS, next position - PhD at HKBU
+  info: Mentor - Ziru Liu, first author - KAIS, next position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Chengxi Li
