--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,9 @@
 
 - date: July 2024
-  headline: "5 of our full research track papers got accept by CIKM'24. Congratulations!"
+  headline: "Our team got third place in three tracks and second place in two tracks at the KDD CUP 2024 Multi-Task Online Shopping Challenge for LLMs hosted by Amazon. Congratulations!"
+
+- date: July 2024
+  headline: "7 of our papers (5 full research & 1 Resource & 1 PhD Symposium track) got accept by CIKM'24. Congratulations!"
 
 - date: July 2024
   headline: "2 MS students (Sheng Zhang and Yinliang Kang) graduate with distinction. Congratulations!"
