--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: July 2024
+  headline: "Our paper 'DNS-Rec: Data-aware Neural Architecture Search for Recommender Systems' got accept by RecSys'24. Congratulations!"
+
+- date: July 2024
   headline: "Our team got third place in three tracks and second place in two tracks at the KDD CUP 2024 Multi-Task Online Shopping Challenge for LLMs hosted by Amazon. Congratulations!"
 
 - date: July 2024
