--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -67,7 +67,7 @@
   number_educ: 0
   info: PhD-Data Science
   education1: with Prof Dingxuan Zhou (USYD)
-  website: https://www.hahahenha.net/alpha-test/CV/index_ENG.html
+  website: https://www.hahahenha.net/static/CV/index_ENG.html
 
 - name: Pengyue Jia
   photo: pengyuejia.jpg
