--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -157,6 +157,7 @@
   email: allial_lrg@163.com
   number_educ: 0
   education1: BS from NEU
+  website: https://waterwool.github.io/
 - name: Yi Wen
   photo: yiwen.jpg
   info: PhD-Data Science
