--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Aug 2024
+  headline: "Our paper 'Multimodal Recommender Systems: A Survey' got accept by CSUR'24. Congratulations!"
+
 - date: July 2024
   headline: "Our paper 'DNS-Rec: Data-aware Neural Architecture Search for Recommender Systems' got accept by RecSys'24. Congratulations!"
 
