--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Aug 2024
+  headline: "Dayan Pan was honored BEST REVIEWERS by KDD'24 Research track. Congratulations!"
+
+- date: Aug 2024
   headline: "Our paper 'Multimodal Recommender Systems: A Survey' got accept by CSUR'24. Congratulations!"
 
 - date: July 2024
