--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,7 +3,7 @@
   headline: "Dayan Pan was honored BEST REVIEWERS by KDD'24 Research track. Congratulations!"
 
 - date: Aug 2024
-  headline: "Our paper 'Multimodal Recommender Systems: A Survey' got accept by CSUR'24. Congratulations!"
+  headline: "Our paper 'Multimodal Recommender Systems: A Survey' got accept by CSUR. Congratulations!"
 
 - date: July 2024
   headline: "Our paper 'DNS-Rec: Data-aware Neural Architecture Search for Recommender Systems' got accept by RecSys'24. Congratulations!"
