--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 
+- date: Sep 2024
+  headline: "3 of our PhD students receive the Research Tuition Scholarship (RTS-CityU) and 6 members also receive the Outstanding Academic Performance Award (OAPA-CityU). Congratulations!"
+
 - date: Aug 2024
   headline: "Dayan Pan was honored BEST REVIEWERS by KDD'24 Research track. Congratulations!"
 
