--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: summer 2024 - KDD Conference in Barcelona, Spain
+  image: kdd24.png
+
 - title: Spring 2024 - Web Conference in Singapore
   image: www24.jpg
 
